@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/libxcrypt
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libxcrypt/ChangeLog,v 1.2 2004/04/26 14:40:52 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libxcrypt/ChangeLog,v 1.3 2004/05/07 20:27:19 tseng Exp $
+
+  07 May 2004; Brandon Hale <tseng@gentoo.org> libxcrypt-2.0.ebuild:
+  Removed S=
 
   26 Apr 2004; Aron Griffis <agriffis@gentoo.org> libxcrypt-2.0.ebuild:
   Add die following econf for bug 48950
